force-app/main/default/objects/Boat_Issue__c/Boat_Issue__c.object-meta.xml
<CustomObject>
    <label>Boat Issue</label>
    <nameField>
        <label>Boat Issue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Boat Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>