force-app/main/default/objects/Boat_Issue__c/fields/Boat__c.field-meta.xml
<CustomField>
    <fullName>Boat__c</fullName>
    <label>Boat</label>
    <referenceTo>Boat__c</referenceTo>
    <relationshipLabel>Boat Issues</relationshipLabel>
    <relationshipName>Boat_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>