force-app/main/default/objects/Boat_Issue__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Broken Oar</fullName><default>false</default><label>Broken Oar</label></value>
            <value><fullName>Hull Damage</fullName><default>false</default><label>Hull Damage</label></value>
            <value><fullName>Rudder Issue</fullName><default>false</default><label>Rudder Issue</label></value>
            <value><fullName>Seat Issue</fullName><default>false</default><label>Seat Issue</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>