force-app/main/default/objects/Boat_Issue__c/fields/Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Reported_By__c</fullName>
    <label>Reported By</label>
    <referenceTo>Rower__c</referenceTo>
    <relationshipLabel>Reported Boat Issues</relationshipLabel>
    <relationshipName>Reported_Boat_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>