force-app/main/default/objects/Boat_Issue__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <label>Session</label>
    <referenceTo>Rowing_Session__c</referenceTo>
    <relationshipLabel>Boat Issues</relationshipLabel>
    <relationshipName>Boat_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>